Fixed overflow x

--- a/style/style.css
+++ b/style/style.css
@@ -5,12 +5,19 @@
 body{
     margin:0;
     padding:0;
+}
+
+.mainbody{
     overflow-x: hidden;
 }
 
 a{
     transition:0.5s;
     text-decoration: none;
+}
+
+button{
+    outline:none;
 }
 
 .nav{
@@ -44,6 +51,7 @@ a{
     font-family: "Nunito Sans",sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: .8em;
     padding:0 .6em;
 }
 
